project/server/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-server
  template:
    metadata:
      labels:
        app: project-server
    spec:
      containers:
        - name: project-server
          image: joonashak/dwk-project-server
