project/server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-server-svc
spec:
  type: NodePort
  selector:
    app: project-server
  ports:
    - name: http
      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 3000
      targetPort: 3000
