project/server/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-server-svc
spec:
  type: ClusterIP
  selector:
    app: project-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
