project/server/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-server-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: project-server-svc
          servicePort: 2345
